--- a/config/config.json
+++ b/config/config.json
@@ -2,26 +2,26 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "library_development",
+    "database": "library",
     "host": "127.0.0.1",
     "dialect": "sqlite",
-    "storage": "library.db",
-    "operatorsAliases": false
+    "storage": "library.db"
+
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "library_test",
     "host": "127.0.0.1",
-    "dialect": "sqlite",
-    "operatorsAliases": false
+    "dialect": "sqlite"
+
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "library_production",
     "host": "127.0.0.1",
-    "dialect": "sqlite",
-    "operatorsAliases": false
+    "dialect": "sqlite"
+
   }
 }
